--- a/app.css
+++ b/app.css
@@ -37,12 +37,12 @@ main {
     display:flex;
     flex-direction: column-reverse;
     gap: 2rem;
-    margin-top: 2em;
+    margin-top: 2rem;
     width: 100%;
 }
 
 form{
-    margin-top: 10px;
+    margin-top: 1rem;
     display:flex;
     flex-direction: column;
     align-items:center;
